--- a/learnPyBookTasks.ipynb
+++ b/learnPyBookTasks.ipynb
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "58b3160e-b174-4e10-a8da-23b119fb23b5",
    "metadata": {},
    "outputs": [
@@ -1835,11 +1835,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f3b5df44-0f12-4d58-9d01-6bcf74154e6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#10.11 favorite num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "42ca1742-fb65-459b-aa48-385594116b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "def getNnum():\n",
+    "\n",
+    "    path = Path('UserNum.txt')\n",
+    "\n",
+    "    try:\n",
+    "        num = int(path.read_text())\n",
+    "        if num: print(f'ypur num is {num}')\n",
+    "    except FileNotFoundError:\n",
+    "        print(f'file could not be found, you need to specify ypue name');\n",
+    "        content = input('please specify your fav num')\n",
+    "        path.write_text(content)\n",
+    "        print(f'Now your fav num is {content}')\n",
+    "    else:\n",
+    "        print('Hey bro')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3779b4bc-984f-4953-8138-72a9210d4aa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ypur num is 4\n",
+      "Hey bro\n"
+     ]
+    }
+   ],
+   "source": [
+    "getNnum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "f127b7a1-c10e-4e11-a03a-205acca9f974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remember me 10.14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "c59ee426-82a4-45fd-af3e-c1ddb7a6ce32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import json\n",
+    "\n",
+    "def greetUser():\n",
+    "\n",
+    "    pathName = 'userName.json'\n",
+    "    path = Path(pathName)\n",
+    "\n",
+    "    try:\n",
+    "        storedName = path.read_text()\n",
+    "        print(f'your name is {storedName}')\n",
+    "    except FileNotFoundError:\n",
+    "        print(f'file could not be found, you need to specify your name');\n",
+    "        content = input('please specify your name')\n",
+    "        path.write_text(content)\n",
+    "        print(f'Now your name is {content}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "7404439c-aa14-47f3-973f-38c68e55e474",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your name is stan\n"
+     ]
+    }
+   ],
+   "source": [
+    " greetUser()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8bc4739-8d29-4b9a-82a4-006256c7d33a",
+   "metadata": {},
+   "source": [
+    "#tests\n",
+    "## class itself\n",
+    "class Employee:\n",
+    "    def __init__(self, name, surname, salary):\n",
+    "        self.name = name\n",
+    "        self.surname = surname\n",
+    "        self.salary = salary\n",
+    "\n",
+    "    def give_raise(self, prom = 5000):\n",
+    "        self.salary += prom\n",
+    "        return self.salary\n",
+    "\n",
+    "## test\n",
+    "import pytest\n",
+    "from get_name import Employee\n",
+    "\n",
+    "pytest.fixture()\n",
+    "def employee():\n",
+    "    empl = Employee('John', 'Smith', 3000)\n",
+    "    return empl\n",
+    "\n",
+    "def test_give_default_raise():\n",
+    "    default_raise = employee().give_raise()\n",
+    "    assert default_raise == 8000\n",
+    "\n",
+    "def test_give_custom_raise():\n",
+    "    default_raise = employee().give_raise(8000)\n",
+    "    assert default_raise == 11000"
+   ]
   }
  ],
  "metadata": {
