Practice with 11 chapter -5 task

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -5544,6 +5544,152 @@
     }
    ],
    "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-04T10:32:01.112300Z",
+     "start_time": "2025-08-04T10:32:01.104310Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#11.4\n",
+    "def check_sequence(arr: list[int]) -> int:\n",
+    "    if len(arr) < 2:\n",
+    "        return 0\n",
+    "\n",
+    "    increasing = True\n",
+    "    decreasing = True\n",
+    "\n",
+    "    for i in range(len(arr) - 1):\n",
+    "        if arr[i] < arr[i + 1]:\n",
+    "            increasing = True\n",
+    "            decreasing = False\n",
+    "        elif arr[i] > arr[i + 1]:\n",
+    "            decreasing = True\n",
+    "            increasing = False\n",
+    "        else:\n",
+    "            # Если есть равные элементы — не строго возрастающая и не строго убывающая\n",
+    "            return 0\n",
+    "\n",
+    "    if increasing:\n",
+    "        return 1\n",
+    "    elif decreasing:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "print(check_sequence([1, 2, 3]))     # 1 (возрастает)\n",
+    "print(check_sequence([3, 2, 1]))     # -1 (убывает)\n",
+    "print(check_sequence([1, 3, 2]))     # 0 (ни то, ни другое)\n",
+    "print(check_sequence([5]))          # 0 (один элемент)"
+   ],
+   "id": "d238e1e4144342e3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "-1\n",
+      "-1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "execution_count": 51
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T18:47:35.275199Z",
+     "start_time": "2025-08-06T18:47:35.270379Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#11.5 Pagination class\n",
+    "\n",
+    "class Pagination:\n",
+    "    def __init__(self, items: type[list[str]], page_size: int = 1):\n",
+    "        self.items = items\n",
+    "        self.page_size = page_size\n",
+    "        self.current_page = 0\n",
+    "\n",
+    "\n",
+    "    def get_total_pages(self):\n",
+    "       return len(self.items)/self.page_size\n",
+    "    def get_visible_items(self):\n",
+    "        return self.items[self.current_page*self.page_size:(self.current_page+1)*self.page_size]\n",
+    "    def next_page(self):\n",
+    "        self.current_page += 1\n",
+    "        if self.current_page >= self.page_size:\n",
+    "            self.current_page = self.page_size\n",
+    "        return f'Go to page {self.current_page}'\n",
+    "    def previous_page(self):\n",
+    "        self.current_page -= 1\n",
+    "        return f'Go to page {self.current_page}'\n",
+    "    def last_page(self):\n",
+    "        self.current_page = self.page_size\n",
+    "        return f'Go to page {self.current_page}'\n",
+    "    def first_page(self):\n",
+    "        self.current_page = 0\n",
+    "        return f'Go to page {self.current_page}'\n",
+    "    def go_to_page(self, page):\n",
+    "        if page < self.page_size:\n",
+    "            self.current_page = page\n",
+    "        elif page >= self.page_size:\n",
+    "            self.current_page = self.page_size\n",
+    "        elif page < 1:\n",
+    "            self.current_page = 0\n",
+    "        return f'Go to page {self.current_page}'\n",
+    "    def get_current_page(self):\n",
+    "        return self.current_page\n",
+    "    def get_page_size(self):\n",
+    "        return self.page_size\n",
+    "    def get_items(self):\n",
+    "        return self.items\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "list1 = list('abcdefghijkkmnopqrstuvwxyz')\n",
+    "pg1 = Pagination(list1, 3)\n",
+    "\n",
+    "print(pg1.get_current_page())\n",
+    "print(pg1.get_visible_items())\n",
+    "print(pg1.go_to_page(4))\n",
+    "print(pg1.get_visible_items())\n",
+    "print(pg1.get_current_page())\n",
+    "print(pg1.first_page())\n",
+    "print(pg1.get_current_page())\n",
+    "print(pg1.get_visible_items())\n",
+    "print(pg1.get_items())\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "67c5ee00fa5d321f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "['a', 'b', 'c']\n",
+      "Go to page 3\n",
+      "['j', 'k', 'k']\n",
+      "3\n",
+      "Go to page 0\n",
+      "0\n",
+      "['a', 'b', 'c']\n",
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'k', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
